[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "nekolocator"
version = "0.1.0"
[tool.poetry.dependencies]
JPype1 = "^1.3.0"
discord = "^1.7.3"
python = "^3.8"
ImageHash = "^4.2.1"
[tool.poetry.dev-dependencies]
